# roo-code-workspace-template

./: .gitignore  CONTRIBUTING.md  README.md  SKILLS.md  docker-compose.yml
.roo/: mcp.json
.roo/skills/agent-workflow/: SKILL.md
.roo/skills/agent-workflow/examples/: web-app-development.md
.roo/skills/agent-workflow/references/: context-engineering.md  incremental-execution.md  workflow-patterns.md
.roo/skills/agent-workflow/templates/: feature-status.json  init-state.md  session-log.md  verify-checklist.md
.roo/skills/gsd-workflow/: SKILL.md
.roo/skills/gsd-workflow/templates/: adr.md  plan.md  project.md  requirements.md  roadmap.md  state.md
.roo/skills/task-master/: SKILL.md
.roo/skills/task-master/examples/: complete-example.md
.roo/skills/task-master/references/: pyramid-scqa-guide.md  smart-neumann-guide.md  verify-checklist.md  wbs-mece-guide.md
.roo/skills/task-master/templates/: scqa-report-template.md  smart-goal-card.md  verify-checklist.md  wbs-template.md
.roo/skills/think-tool/: SKILL.md
.roo/skills/web-reader/: SKILL.md
.roo/skills/web-search/: SKILL.md
mcp/searxng_mcp/: Dockerfile  README.md  mcp_config.json  mcp_server.py  pyproject.toml
mcp/web_reader_mcp/: Dockerfile  README.md  mcp_server.py  pyproject.toml
searxng/: docker-compose.yml  settings.yml
searxng/searxng/: settings.yml
