[project]
name = "web-reader-mcp"
version = "1.0.0"
description = "Web Reader MCP Server for AI Agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "trafilatura>=1.6.0",
]

[project.optional-dependencies]
dynamic = ["playwright>=1.40.0"]

[project.scripts]
web-reader-mcp = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["mcp_server.py"]
